	PR c++/9400 	* decl.c (pushdecl): Don't check for shadowing of DECL_ARTIFICIAL 	PARM_DECLs.

PR c++/9400
	* g++.dg/warn/Wshadow-2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@63904 138bc75d-0d04-0410-961f-82ee72b054a4