gcc/testsuite/g++.dg/warn/Wshadow-2.C
@@ -1,0 +1,10 @@
+/* { dg-options "-Wshadow" } */
+
+struct A {
+  void a1 () {
+    struct B { B() {} }; // There should be no warning here.
+  }
+  void a2 () {
+      struct B { };
+  }
+};
